--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.6",
-    "pnotify": "^5.2.0",
     "postcss-loader": "^4.3.0",
     "sass-loader": "^10.2.0",
     "style-loader": "^1.3.0",
@@ -50,6 +49,8 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "@pnotify/core": "^5.2.0",
+    "@pnotify/mobile": "^5.2.0",
     "basiclightbox": "^5.0.4",
     "core-js": "^3.13.1",
     "handlebars": "^4.7.7",
